add temp debug message

--- a/deployment/playbook.yml
+++ b/deployment/playbook.yml
@@ -37,6 +37,11 @@
         clone: yes
         update: yes
 
+    - command: "ls -al"
+      register: dir_out
+
+    - debug: msg="Output {{dir_out.stdout_lines|join(',')}}"
+
     - name: Build the Docker container
       docker_image:
         build:
